--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "author": "",
   "private": true,
+  "engines": {
+    "node": "16.13.1"
+  },
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
